--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,9 @@ h1,h2,h3,h4,h5,h6,label,p{
 }
 /*----*/
 
-
+header .bxslide {
+  height: 100% !important;
+}
 
 h2{
     margin: 0;     
@@ -47,20 +49,8 @@ h2{
     font-size: 52px;
     font-family: "trebuchet ms", sans-serif;    
 }
-.item{
-    
-     position: absolute;
-    text-align: center;
-    height: 100% ;
 
-}
-header {
-   width: 100%;
-}
 
-.carousel{
-    margin-top: 0px;
-}
 
 
 .logo span {
@@ -93,7 +83,10 @@ header {
 
 .logo {
     padding: 0 0em 0 3.5em;
-    margin-top: -93vh;
+    margin-top: 5vh;
+    position: absolute;
+    z-index: 2;
+   
 }
 .logo h1 a {
     color: #fff !important;
@@ -124,9 +117,10 @@ header {
 }
 .phone {
 text-align: center;
-
+position: absolute;
 margin-left: 65%;
-margin-top: -93vh;
+margin-top: 5vh;
+z-index: 11;
 }
 .number p {
   color: #fff;
@@ -238,7 +232,7 @@ margin-top: -93vh;
     text-align: center;
 }
 .logof h1 {
-color: #fff !important;
+color: #fff ;
     font-size: 2.5em;
     text-decoration: none;
   font-family: 'CalligraphMedium', cursive;
@@ -330,7 +324,7 @@ address p {
 
 }
 @media (max-width: 736px){
-p.log {
+.log {
   width: 60%;
 }
 .number span {
@@ -435,7 +429,7 @@ address {
 }
 
 .logo {
-    margin-top: -68vh;
+    margin-top: -30vh;
     color: #000;
     width: 100%;
     padding: 0;
@@ -443,15 +437,13 @@ address {
 }
 .logo h1 a {
     color: #000;
-    font-size: 1.2em;
-    text-decoration: none;
-  font-family: 'CalligraphMedium', cursive;
-  font-weight:20;
-}
+    font-size: 1.5em;
+  }
 
 .logo span {
     color: #000;
 }
+
 .logo p {
   color: #000;
   font-size: 1.4em;
@@ -470,25 +462,46 @@ address {
   padding: 0em 0;
 }
 
-h2 {
-    padding-top: 75vh;
+.slide h1 {
+    margin-top: -30vh;
     font-size: 27px;
     text-align: center;
-    display: none;
-
-    
+    color: #fff;
+    font-family: 'CalligraphMedium', cursive;
+  font-weight:20;
 }
+ section h2 {
+    padding-top: 75px;
+    font-size: 30px;
+    text-align: center;
+ }
+
+.align {
+  margin: 10vh 0 0 0;
+}
+.slide {
+  height: 37vh;
+}
+
 .phone {
 text-align: center;
-margin-left: 1px;
-margin-right: 1px;
-margin-top: 1vh;
+margin-left: 0;
+margin-right: 0;
+margin-top: -15vh;
 color: #000;
+}
+.col-sm-4 {
+  text-align: center;
+;
 }
 .number p {
   color: #000;
     font-size: 1em;
     text-align: center;
+}
+.bx-wrapper .bx-pager, .bx-wrapper .bx-controls-auto {
+    bottom: -18px;
+    
 }
 
 .number span {
@@ -502,18 +515,6 @@ color: #000;
     font-family: 'Poiret One', cursive;
     font-size: 1.5em;
 }
-.item {
-  padding-top: 0;
-  height: 30%;
-  margin-top: 0vh;
-  position: absolute;
 
-}
-
-#myCarousel {
-  
-  margin-top: 40vh;
-  height: auto;
-}
 
 }
