--- a/css/style.css
+++ b/css/style.css
@@ -419,8 +419,19 @@ address {
   padding: 0;
   margin: 0;
 }
+.down a i {
+  font-size: 40px;
+  text-align: center;
+  color: #071B53;
 
-
+}
+.down a:hover {
+ 
+  color: #040E44;
+}
+.down {
+  text-align: center;
+}
 .number span {
   font-size: 0.9em;
 }
@@ -474,12 +485,16 @@ address {
 }
  section h2 {
     padding-top: 0px;
+    padding-bottom: 10px;
     font-size: 30px;
     text-align: center;
  }
-
+.bx-wrapper {
+    margin-bottom: 40px;
+ 
+  }
 .align {
-  margin: 10vh 0 0 0;
+  margin: 3vh 0 0 0;
 }
 .slide {
   height: 37vh;
