--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -9,16 +9,25 @@
   *zoom: 1;
   -ms-touch-action: pan-y;
   touch-action: pan-y;
-  margin-top: 35vh;
+  margin-top: 0vh;
+}
 
+
+@media(max-width:640px){
+.bx-wrapper {
+  position: relative;
+  margin-bottom: 60px;
+  margin-top: 38vh;
+}
 
 }
+
 .bx-wrapper img {
   width: 100%;
   display: block;
   }
 .bxslider {
-  margin: 0 0 35vh 0;
+  margin: 0 0 0vh 0;
   padding: 0;
 }
 ul.bxslider {
